0.10.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.overflow.init.Init.rst.txt
polaris.tasks.ocean.overflow.init.Init
======================================

.. currentmodule:: polaris.tasks.ocean.overflow.init

.. autoclass:: Init

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~Init.__init__
      ~Init.add_dependency
      ~Init.add_input_file
      ~Init.add_output_file
      ~Init.check_properties
      ~Init.constrain_resources
      ~Init.map_from_native_model_vars
      ~Init.map_to_native_model_vars
      ~Init.open_model_dataset
      ~Init.process_inputs_and_outputs
      ~Init.run
      ~Init.runtime_setup
      ~Init.set_resources
      ~Init.set_shared_config
      ~Init.setup
      ~Init.validate_baselines
      ~Init.write_model_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Init.component
   
   